fix(comments): prevent list animation overflow

--- a/src/styles/components/_comments.scss
+++ b/src/styles/components/_comments.scss
@@ -5,6 +5,7 @@
 	display: flex;
 	flex-direction: column;
 	gap: 100px;
+	overflow: hidden;
 
 	&__load-more-button {
 		display: flex;
